bootstrap導入 & TOPページ作成

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,23 +2,43 @@
 
 <p><%= notice %></p>
 
-<table>
+<div class="container">
+  <div id="new-blog-link">
+    <%= link_to '新規ブログを作成する', new_blog_path, class: 'btn btn-default' %>
+  </div>
+
+  <div class="row">
+    <% @blogs.each do |blog| %>
+      <div class="col-xs-12 col-md-6 blog-panel">
+        <h2><%= blog.title %></h2>
+        <p><%= blog.content %></p>
+        <div class="blog-links">
+          <%= link_to 'Show', blog, class: 'btn btn-default' %>
+          <%= link_to 'Edit', edit_blog_path(blog), class: 'btn btn-info' %>
+          <%= link_to 'Destroy', blog, method: :delete, data: { confirm: '本当に削除していいですか？' }, class: 'btn btn-danger' %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+<!-- <table>
   <tr>
     <th>タイトル</th>
     <th>内容</th>
   </tr>
-  
+
   <% @blogs.each do |blog| %>
     <tr>
       <td><%= blog.title %></td>
       <td><%= blog.content %></td>
-      <td><%= link_to '詳細を確認する', blog_path(blog.id) %></td>
-      <td><%= link_to "ブログを編集する", edit_blog_path(blog.id) %></td>
-      <td><%= link_to 'ブログを削除する', blog_path(blog.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
+      <td><%= link_to '詳細を確認する', blog_path(blog.id), class: "label label-info" %></td>
+      <td><%= link_to "ブログを編集する", edit_blog_path(blog.id), class: "label label-success" %></td>
+      <td><%= link_to 'ブログを削除する', blog_path(blog.id), class: "label label-danger", method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
     </tr>
   <% end %>
-</table>
+</table> -->
 
 <br>
 
-<%= link_to '新しくブログを投稿する', new_blog_path %>
+<!-- <%= link_to '新しくブログを投稿する', new_blog_path %> -->
