--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -3,14 +3,14 @@
     <div id="error_explanation">
       <h2><%= @blog.errors.count %>件のエラーがあります。</h2>
       <ul>
-        
+
         <% @blog.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
-  
+
   <div class="blog_title">
     <%= form.label :title %>
     <%= form.text_field :title %>
@@ -19,9 +19,9 @@
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
-  <%= form.submit %>
+  <%= form.submit class: 'btn btn-info' %>
 <% end %>
 
 <br>
 
-<%= link_to "ブログ一覧画面にもどる", blogs_path %>
+<%= link_to "ブログ一覧画面にもどる", blogs_path, class: 'btn btn-default' %>
