お気に入り機能追加

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,5 @@
 <h1>ブログ一覧</h1>
 
-<p><%= notice %></p>
-
 <div class="container">
   <div id="new-blog-link">
     <%= link_to '新規ブログを作成する', new_blog_path, class: 'btn btn-default' %>
@@ -14,8 +12,10 @@
         <p><%= blog.content %></p>
         <div class="blog-links">
           <%= link_to 'Show', blog, class: 'btn btn-default' %>
-          <%= link_to 'Edit', edit_blog_path(blog), class: 'btn btn-info' %>
-          <%= link_to 'Destroy', blog, method: :delete, data: { confirm: '本当に削除していいですか？' }, class: 'btn btn-danger' %>
+          <% if blog.user_id == current_user.id %>
+            <%= link_to 'Edit', edit_blog_path(blog), class: 'btn btn-info' %>
+            <%= link_to 'Destroy', blog, method: :delete, data: { confirm: '本当に削除していいですか？' }, class: 'btn btn-danger' %>
+          <% end %>
         </div>
       </div>
     <% end %>
