--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,17 @@
 <h1><%= @user.name %>のページ</h1>
 
 <p>メールアドレス: <%= @user.email %></p>
+
+<% if @favorites_blogs.present? %>
+  <% @favorites_blogs.each do |blog| %>
+    <div class="col-xs-12 col-md-6 blog-panel">
+      <h2><%= blog.title %></h2>
+      <p><%= blog.content %></p>
+      <div class="blog-links">
+        <%= link_to 'Show', blog, class: 'btn btn-default' %>
+        <% favorite = @user.favorites.find_by(blog_id: blog.id) %>
+        <%= link_to 'お気に入り解除する', favorite_path(id: favorite.id), method: :delete, class: 'btn btn-danger' %>
+      </div>
+    </div>
+  <% end %>
+<% end %>
