--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -12,9 +12,11 @@
         <p><%= blog.content %></p>
         <div class="blog-links">
           <%= link_to 'Show', blog, class: 'btn btn-default' %>
-          <% if blog.user_id == current_user.id %>
-            <%= link_to 'Edit', edit_blog_path(blog), class: 'btn btn-info' %>
-            <%= link_to 'Destroy', blog, method: :delete, data: { confirm: '本当に削除していいですか？' }, class: 'btn btn-danger' %>
+          <% if current_user.present? %>
+            <% if blog.user_id == current_user.id %>
+              <%= link_to 'Edit', edit_blog_path(blog), class: 'btn btn-info' %>
+              <%= link_to 'Destroy', blog, method: :delete, data: { confirm: '本当に削除していいですか？' }, class: 'btn btn-danger' %>
+            <% end %>
           <% end %>
         </div>
       </div>
