--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
           <li><%= link_to "Sign up", new_user_path %></li>
           <li><%= link_to "Login", new_session_path %></li>
         <% end %>
+        <li><%= link_to "お問い合わせ", new_contact_path %></li>
       </ul>
     </header>
 
