blog,user画像アップロード機能追加

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -15,9 +15,14 @@
     <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
-  <div class="blog_title">
+  <div class="blog_content">
     <%= form.label :content %>
     <%= form.text_field :content %>
+  </div>
+  <div class="blog_image">
+    <%= form.label :image %>
+    <%= image_tag(@blog.image.url) if @blog.image.url %>
+    <%= form.file_field :image, id: :feed_image %>
   </div>
   <%= form.submit class: 'btn btn-info' %>
 <% end %>
