--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,8 @@
 
 <p>メールアドレス: <%= @user.email %></p>
 
+<p>画像:<%= image_tag @user.image %></p>
+
 <% if @favorites_blogs.present? %>
   <% @favorites_blogs.each do |blog| %>
     <div class="col-xs-12 col-md-6 blog-panel">
