--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -36,6 +36,12 @@
       </div>
 
       <div class="col-md-12">
+        <%= f.label :image %>
+        <%= image_tag(@user.image.url) if @user.image.url %>
+        <%= f.file_field :image, id: :feed_image %>
+      </div>
+
+      <div class="col-md-12">
         <%= f.submit "Create my account", class: 'btn btn-default' %>
       </div>
     <% end %>
